--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -3,11 +3,16 @@
   "type": "module",
   "version": "0.0.0",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./eslint/base": "./src/eslint/base.ts",
+    "./eslint/react": "./src/eslint/react.ts",
+    "./eslint/next": "./src/eslint/next.ts",
+    "./tsconfig/base": "./src/tsconfig/base.ts"
   },
   "dependencies": {
     "@konfik-plugin/eslint": "latest",
-    "@konfik-plugin/prettier": "latest"
+    "@konfik-plugin/prettier": "latest",
+    "@konfik-plugin/tsconfig": "latest"
   },
   "publishConfig": {
     "access": "public"
