--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "@konfik-plugin/gitignore": "latest",
     "@konfik-plugin/package-json": "latest",
     "@konfik-plugin/prettier": "latest",
+    "@konfik-plugin/tsconfig": "latest",
     "prettier": "latest",
     "konfik": "latest",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^40.1.0",
     "typescript": "^4.5.5"
+  },
+  "scripts": {
+    "lint:check": "run lint:eslint:check && run lint:prettier:check",
+    "lint:fix": "run lint:eslint:fix & run lint:prettier:fix",
+    "lint:eslint:fix": "eslint packages --ext .ts --fix",
+    "lint:eslint:check": "eslint packages --ext .ts --max-warnings=0",
+    "lint:prettier:fix": "prettier packages --write",
+    "lint:prettier:check": "prettier packages --check"
   }
 }
