--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -10,6 +10,22 @@
     "./tsconfig/base": "./src/tsconfig/base.ts"
   },
   "types": "./src/index.ts",
+  "typesVersions": {
+    "*": {
+      "./eslint/base": [
+        "./src/eslint/base.ts"
+      ],
+      "./eslint/react": [
+        "./src/eslint/react.ts"
+      ],
+      "./eslint/next": [
+        "./src/eslint/next.ts"
+      ],
+      "./tsconfig/base": [
+        "./src/tsconfig/base.ts"
+      ]
+    }
+  },
   "dependencies": {
     "@konfik-plugin/eslint": "latest",
     "@konfik-plugin/prettier": "latest",
