--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "unicorn/no-array-reduce": "off",
     "unicorn/no-array-for-each": "off",
     "unicorn/no-null": "off",
+    "unicorn/prefer-spread": "off",
     "func-style": ["warn", "expression"],
     "prefer-arrow-callback": "warn",
     "prefer-arrow/prefer-arrow-functions": [
