--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "unicorn/no-null": "off",
     "unicorn/prefer-spread": "off",
     "unicorn/no-abusive-eslint-disable": "off",
+    "unicorn/prefer-query-selector": "off",
     "func-style": ["warn", "expression"],
     "prefer-arrow-callback": "warn",
     "prefer-arrow/prefer-arrow-functions": [
