--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@konfik-plugin/package-json": "latest",
     "@konfik-plugin/prettier": "latest",
     "@konfik-plugin/tsconfig": "latest",
-    "prettier": "latest",
-    "konfik": "latest",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unicorn": "^40.1.0",
+    "konfik": "latest",
+    "prettier": "latest",
     "typescript": "^4.5.5"
   },
   "scripts": {
