--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
   "ignorePatterns": ["!.konfik", "**/dist/*", "**/.nyc_output/*", "node_modules/*"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "simple-import-sort", "import", "prefer-arrow"],
-  "extends": ["plugin:@typescript-eslint/recommended", "plugin:unicorn/recommended", "prettier"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:unicorn/recommended",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
     "unicorn/prevent-abbreviations": "off",
     "unicorn/filename-case": "off",
