--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "unicorn/prefer-spread": "off",
     "unicorn/no-abusive-eslint-disable": "off",
     "unicorn/prefer-query-selector": "off",
+    "unicorn/relative-url-style": ["warn", "always"],
     "prefer-arrow-callback": "warn",
     "prefer-arrow/prefer-arrow-functions": [
       "warn",
